move and comment file